--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <tag>HEAD</tag>
   </scm>
 
-  
+
   <properties>
     <!-- build settings -->
     <minimumMavenVersion>3.3</minimumMavenVersion>
@@ -35,6 +35,10 @@
     <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
     <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
     <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+
+    <!-- Sonar -->
+    <sonar.language>java</sonar.language>
+    <sonar.projectName>COL Newick-IO</sonar.projectName>
   </properties>
 
   <developers>
